# PyFeed

./: .gitignore  FeedReader.py  FilterDialogue.py  FilterListItem.py  MainApp.py  README.md  RssListItem.py  Settings.py  SettingsDialogue.py  build.sh  diag.py  diag.ui  feedpy_rc.py  feedpy_rc.qrc  filters.py  filters.ui  linux_convert.sh  mainwindow.py  mainwindow.ui  pyproject.toml  setup.py
