[tool.poetry]
name = "PyFeed"
version = "0.1.0"
description = "QT5 RSS reader in python 3.8.2"

license = "GPL"

authors = [
    "Jason McGillivray <mcgillivray.jason@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/mcgillij/PyFeed"
homepage = "https://github.com/mcgillij/PyFeed"

keywords = ['rss', 'reader']

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
toml = "^0.10.2"
# Dependencies with extras


requests = "^2.26.0"
feedparser = "^6.0.8"
PySide2 = "^5.15.2"
[tool.poetry.dev-dependencies]
ipython = "^7.31.1"
black = "^21.9b0"
pylint = "^2.11.1"
flake8 = "^3.9.2"

[tool.poetry.scripts]
my-script = 'MainApp:main'
